--- a/css/style.css
+++ b/css/style.css
@@ -1257,7 +1257,7 @@ header.fixed_header.sticky .hamburger__inner::after {
   align-items: center;
   justify-content: center;
   height: 135px;
-  background-color: #6e6a64;
+  background-color: #28125e;
 }
 
 .sidebar-navigation {
