--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,8 @@ body {
   font-size: 15px;
   font-size: 0.9375rem;
   line-height: 1.6;
-  font-family: "Montserrat", Helvetica, sans-serif;
+  /* font-family: "Montserrat", Helvetica, sans-serif; */
+  font-family: 'Roboto', sans-serif;
   color: #333;
 }
 
